# mirobot_mujoco_ros

./: CMakeLists.txt  README.md  package.xml
assets/: .gitignore  mirobot_model.urdf.xacro  mirobot_model.xml.xacro  mirobot_v2.urdf.xacro  mirobot_v2.xml.xacro
config/: controllers.yaml  initial_joint_states.yaml  mirobot.rviz  mujoco_ros_plugins.yaml
launch/: bringup_mujoco_ros.launch  load_mirobot_model.launch  load_mirobot_v2.launch
scripts/: get_mjcf.sh
