<?xml version="1.0"?>
<package format="2">
  <name>mirobot_mujoco_ros</name>
  <version>1.1.0</version>
  <description>The mirobot_mujoco_ros package</description>

  <maintainer email="balazs.andras.balint@ipa.fraunhofer.de">Balázs András Bálint</maintainer>

  <license>BSD-3-Clause</license>

  <author email="balazs.andras.balint@ipa.fraunhofer.de">Balázs András Bálint</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend version_gte="1.0.0" version_lt="2.0.0">mirobot_urdf</exec_depend>
  <exec_depend version_gte="0.8.0" version_lt="0.9.0">mujoco_ros</exec_depend>
  <exec_depend version_gte="0.8.0" version_lt="0.9.0">mujoco_ros_control</exec_depend>
  <exec_depend version_gte="0.8.0" version_lt="0.9.0">mujoco_ros_sensors</exec_depend>
  <exec_depend version_gte="2.0.0" version_lt="3.0.0">mujoco_ros_mocap_control_plugin</exec_depend>

  <export/>
</package>
